<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <plurals name="tab_apps_count">
        <item quantity="one">%1$d app</item>
        <item quantity="other">%1$d apps</item>
    </plurals>
    <plurals name="hidden_apps_count">
        <item quantity="other">%1$d hidden</item>
    </plurals>
    <string name="default_live_wallpaper">com.breel.wallpapers/com.breel.wallpapers.dioramas.lagos.LagosWallpaperService</string>
    <string name="app_releases_url">https://play.google.com/store/apps/details?id=amirz.rootless.nexuslauncher</string>
    <string name="app_donate_url">https://play.google.com/store/apps/details?id=amirz.donation</string>
    <string name="special_greeting" translatable="false">Hi Jane! Lots of love from the team.</string>
    <string name="action_open_notifications_class" translatable="false">ch.deletescape.lawnchair.gestures.handlers.NotificationsOpenGestureHandler</string>
    <string name="action_open_drawer_class" translatable="false">ch.deletescape.lawnchair.gestures.handlers.OpenDrawerGestureHandler</string>
    <string name="action_open_overview_class" translatable="false">ch.deletescape.lawnchfair.gestures.handlers.OpenOverviewGestureHandler</string>
    <string name="action_do_nothing_class" translatable="false">ch.deletescape.lawnchair.gestures.BlankGestureHandler</string>
    <string name="default_owm_key" translatable="false">a9b41f104ced7c20b203203529eb1809</string>
    <string name="action_switch_apps_class" translatable="false">ch.deletescape.lawnchair.gestures.SwitchAppsGestureHandler</string>
    <string name="icu_abbrev_wday_month_day_no_year">EEEEMMMd</string>
    <string name="icu_abbrev_wday_month_day_no_year_jstdicu">EEEE MMM d</string>
    <string name="icu_abbrev_time">HH:mm</string>
    <string name="icu_abbrev_time_12h">hh:mm aa</string>
    <string name="icu_abbrev_date"> dd MMMM</string>
    <string name="in_smartspace">In \‘At a glance\’ widget</string>
    <string name="smartspace_time">Time</string>
    <string name="smartspace_date">Date</string>
    <string name="customize">Customize</string>
    <string name="smartspace_preferences_in_settings">At a Glance</string>
    <string name="smartspace_preferences_in_settings_desc">Date, time, weather source</string>
    <string name="search">Search</string>
    <string name="label_voice_search">Voice search</string>
    <string name="icon_pack">Icon pack</string>
    <string name="home_widget">Home widget</string>
    <string name="title_show_google_app">%1$s on left</string>
    <string name="pref_show_google_now_summary">@string/msg_minus_one_on_left</string>
    <string name="msg_minus_one_on_left">Feed to the left of desktop</string>
    <string name="about">About</string>
    <string name="google_app">Google app</string>
    <string name="about_app_version">Version</string>
    <string name="app_name_pixel_launcher">Pixel Launcher</string>
    <string name="title_disable_suggestions_prompt">Disable app suggestions</string>
    <string name="msg_disable_suggestions_prompt">"Usage data will be removed"</string>
    <string name="label_turn_off_suggestions">Disable</string>
    <string name="app_name_lawnchair">Librechair</string>
    <string name="pixel_style_pref_title">Pixel style</string>
    <string name="about_summary_title">Summary</string>
    <string name="action_edit">Edit</string>
    <string name="hide_app_sum">Hide from the app drawer</string>
    <string name="hide_app">Hide app</string>
    <string name="icon_shape_rounded_square">Rounded square</string>
    <string name="pixel_ui_pref_summary">Icon pack, blur, colors</string>
    <string name="app_drawer_pref_title">App drawer</string>
    <string name="app_drawer_pref_summary">Opacity, suggestions, hide apps</string>
    <string name="search_pref_summary">Color, search engine, icons</string>
    <string name="general_pref_title">Desktop</string>
    <string name="general_pref_summary">Grid, icon layout, status bar</string>
    <string name="about_pref_summary">Team, links, licences</string>
    <string name="hide_app_selected">&#160; hidden</string>
    <string name="hide_app_apply">Apply</string>
    <string name="hide_dock_gradient">Disable gradient</string>
    <string name="dock_pref_summary">Style, opacity, page indicator</string>
    <string name="dock_pref_title">Dock</string>
    <string name="hide_icon_labels_pref_title">Hide app names</string>
    <string name="backups">Backups</string>
    <string name="new_backup">Create</string>
    <string name="restore_backup">Restore</string>
    <string name="backup_location">Location</string>
    <string name="choose_backup_path">Browse</string>
    <string name="backup_contents">Content</string>
    <string name="backup_settings">Settings</string>
    <string name="homescreen">Home screen</string>
    <string name="backup_wallpaper">Wallpaper</string>
    <string name="backup_error_blank_name">Enter backup name</string>
    <string name="backup_error_blank_location">Pick backup location</string>
    <string name="backup_error_blank_contents">Add backup content</string>
    <string name="backup_creating">Creating backup</string>
    <string name="no_recent_backups">Nothing to show</string>
    <string name="backup_loading">Loading...</string>
    <string name="backup_invalid">Incorrect backup file</string>
    <string name="backup_share">Share</string>
    <string name="backup_pref_summary">Save home screen, restore backups</string>
    <string name="backup_timestamp">Date created</string>
    <string name="backup_restoring">Restoring</string>
    <string name="backup_restarting">Restarting</string>
    <string name="restore_contents">Restore content</string>
    <string name="restore_success">Restore finished</string>
    <string name="failed">Something went wrong</string>
    <string name="backup_share_text">Lawnchair backup</string>
    <string name="full_width_widgets_pref_summary">Let widgets stretch to screen edges</string>
    <string name="full_width_width_widgets_pref_title">Wide widgets</string>
    <string name="hide_apps">Hide apps</string>
    <string name="hide_apps_sum">Remove apps from drawer</string>
    <string name="grid_size">Grid size</string>
    <string name="developer_options_title">Developer options</string>
    <string name="developer_options_enabled">Developer options enabled</string>
    <string name="restart_lawnchair_pref_title">Restart</string>
    <string name="restart_lawnchair_pref_summary">Apply settings again</string>
    <string name="show_debug_info_pref_title">Show component names</string>
    <string name="debug_component_name">Component name</string>
    <string name="debug_component_name_copied">Copied</string>
    <string name="read_external_storage_required">To save backup, grant storage permission</string>
    <string name="local_backups">Backups in storage</string>
    <string name="backup_location_device_storage">Lawnchair folder</string>
    <string name="grid_size_height">Height</string>
    <string name="grid_size_width">Width</string>
    <string name="launcher_theme_override_label">Force dark theme</string>
    <string name="smartspace_hours_mins">%1$s %2$s</string>
    <string name="blur_pref_title">Blur</string>
    <string name="blur_pref_summary">Blur effect for app drawer, dock, settings backgrounds</string>
    <string name="blur_radius_pref_title">Blur strength</string>
    <string name="dock_colored_google">Colored icons</string>
    <string name="hotseat_show_arrow">Arrow</string>
    <string name="hotseat_show_page_indicator">Page indicator</string>
    <string name="dock_style_pref_title">Dock style</string>
    <string name="dock_style_p">Rounded</string>
    <string name="dock_style_n">Flat</string>
    <string name="dock_style_hidden">Hidden</string>
    <string name="dock_search_bar">Dock search bar</string>
    <string name="opacity">Opacity</string>
    <string name="title_all_apps_google_search">Global search</string>
    <string name="summary_all_apps_google_search">Find web results and apps</string>
    <string name="num_hotseat_icons_pref_title">Number of icons</string>
    <string name="icon_scale_pref_title">Icon size</string>
    <string name="add_settings_shortcut_title">Add settings icon to home screen</string>
    <string name="icon_pack_default">System icons</string>
    <string name="loading">Loading…</string>
    <string name="low_performance_mode_pref_title">Low-performance mode</string>
    <string name="action_preferences">@string/customize</string>
    <string name="title_storage_permission_required">Storage permission needed</string>
    <string name="content_storage_permission_required">Grant storage permission to set wallpaper</string>
    <string name="reset_to_default">Reset to default</string>
    <string name="dock_shadow">Shadow</string>
    <string name="dock_fill">Background</string>
    <string name="radius">Corner rounding</string>
    <string name="gradient">Gradient</string>
    <string name="pref_category_icons">Icons</string>
    <string name="pref_category_aag">At a glance</string>
    <string name="pref_category_pixel_searchbar">Pixel search bar</string>
    <string name="pref_category_weather">Weather</string>
    <string name="pref_category_misc">Other</string>
    <string name="pref_category_layout">Layout</string>
    <string name="pref_category_theme">Style</string>
    <string name="pref_category_searchbar">Search bar</string>
    <string name="about_twitter" translatable="false">Twitter</string>
    <string name="title_attribouter_licenses">Open Source Licenses</string>
    <string name="title_attribouter_email">Email</string>
    <string name="title_attribouter_website">Website</string>
    <string name="title_attribouter_rate">Rate</string>
    <string name="title_attribouter_version">Version %1$s</string>
    <string name="title_attribouter_license">License</string>
    <string name="title_attribouter_license_permissions">Permissions</string>
    <string name="title_attribouter_license_conditions">Conditions</string>
    <string name="title_attribouter_license_limitations">Limitations</string>
    <string name="title_attribouter_more_info">More Info</string>
    <string name="title_attribouter_translators">Translators</string>
    <string name="about_our_team">Our team</string>
    <string name="about_our_contributors">Our main contributors</string>
    <string name="about_our_family">Our other family members</string>
    <string name="about_role_lead">Lead Developer</string>
    <string name="about_role_devops">DevOps</string>
    <string name="about_role_dev">Developer</string>
    <string name="about_role_dev_mod">Developer/Moderator</string>
    <string name="about_role_designer">Designer</string>
    <string name="about_role_ui_ux_designer">UI/UX designer</string>
    <string name="about_role_special_snowflake">Social Media/PR &amp; OEM relations</string>
    <string name="about_role_mod_support">Moderator/support</string>
    <string name="about_role_family_member">Family member</string>
    <string name="smartspace_time_24_h">24-hour format</string>
    <string name="pref_smartspace_widget_provider">Weather source</string>
    <string name="default_city">Lucerne, CH</string>
    <string name="pref_weather_api_key_title">API key</string>
    <string name="pref_weather_city_title">City</string>
    <string name="pref_weather_units">Temperature unit</string>
    <string name="title_use_pill_qsb">Use pill style search bar</string>
    <string name="pref_smartspace_time_above">Show large clock</string>
    <string name="pref_smartspace_time_above_summary">Show the clock above the widget</string>
    <string name="background_color">Background color</string>
    <string name="pref_smartspace_event_providers">Events sources</string>
    <string name="title_preference_feed_sorting_algorithm">Feed sorting algorithm</string>
    <string name="pref_weather_icon_pack">Weather Icons</string>
</resources>