<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  
    <ch.deletescape.lawnchair.preferences.PreviewPreference
        android:key="pref_smartspace_preview"
        app:previewLayout="@layout/smartspace_preview" />
    
    <ch.deletescape.lawnchair.preferences.StyledPreferenceCategory
        android:key="homewidgetStyle"
        android:title="@string/pref_category_theme">

        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:key="pref_smartspace_date"
            android:dependency="pref_use_pill_qsb"
            android:title="@string/smartspace_date"
            android:summary="@string/in_smartspace"
            android:defaultValue="true"
            />

        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:key="pref_smartspace_time"
            android:title="@string/smartspace_time"
            android:summary="@string/in_smartspace"
            android:defaultValue="false"
            android:dependency="pref_use_pill_qsb"
            />

        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:key="pref_smartspace_time_above"
            android:title="@string/pref_smartspace_time_above"
            android:summary="@string/pref_smartspace_time_above_summary"
            android:defaultValue="false"
            android:dependency="pref_smartspace_time"
            />

        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:key="pref_smartspace_time_24_h"
            android:title="@string/smartspace_time_24_h"
            android:defaultValue="false"
            android:dependency="pref_smartspace_time"
            />

        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:key="pref_use_pill_qsb"
            android:title="@string/title_use_pill_qsb"
            android:disableDependentsState="true"
            android:defaultValue="false"
            />

        <ch.deletescape.lawnchair.preferences.SuperGColorPickerPreference
            android:key="pref_superGBackgroundColorResolver"
            android:title="@string/background_color"
            android:dependency="pref_use_pill_qsb"
            app:colorMode="RGB"
            app:resolvers="@array/resolvers_superg_background"/>

    </ch.deletescape.lawnchair.preferences.StyledPreferenceCategory>

    <ch.deletescape.lawnchair.preferences.StyledPreferenceCategory
        android:key="prefCat_homewidgetWeather"
        android:title="@string/pref_category_weather">

        <ch.deletescape.lawnchair.preferences.SmartspaceProviderPreference
            android:key="pref_smartspace_widget_provider"
            android:title="@string/pref_smartspace_widget_provider"
            android:summary="%s"
            />

        <ch.deletescape.lawnchair.settings.ui.WeatherIconPackPreference
            android:key="pref_weatherIcons"
            android:title="@string/pref_weather_icon_pack"
            app:controllerClass=".WeatherIconPackController"/>

        <ch.deletescape.lawnchair.preferences.OWMEditTextPreference
            android:defaultValue="@string/default_owm_key"
            android:dependency="pref_smartspace_widget_provider"
            android:key="pref_weatherApiKey"
            android:title="@string/pref_weather_api_key_title" />

        <ch.deletescape.lawnchair.preferences.OWMEditTextPreference
            android:defaultValue="@string/default_city"
            android:dependency="pref_smartspace_widget_provider"
            android:key="pref_weather_city"
            android:title="@string/pref_weather_city_title" />

        <ListPreference
            android:defaultValue="metric"
            android:dependency="pref_smartspace_widget_provider"
            android:entries="@array/unitsTexts"
            android:entryValues="@array/unitsValues"
            android:key="pref_weather_units"
            android:summary="%s"
            android:title="@string/pref_weather_units" />

        <ch.deletescape.lawnchair.preferences.SmartspaceEventProvidersPreference
            android:key="pref_smartspace_event_providers"
            android:dependency="pref_use_pill_qsb"
            android:title="@string/pref_smartspace_event_providers" />
    </ch.deletescape.lawnchair.preferences.StyledPreferenceCategory>


    <ch.deletescape.lawnchair.preferences.StyledPreferenceCategory
        android:key="prefCat_smartFeed"
        android:title="@string/activity_feed_title">
        <ch.deletescape.lawnchair.preferences.RSSSourcesPreference
            android:key="pref_rss_sources"
            android:summary="%s"
            android:title="@string/title_pref_rss_sources" />
        <ch.deletescape.lawnchair.preferences.SortingAlgorithmPreference
            android:defaultValue="ch.deletescape.lawnchair.feed.MixerSortingAlgorithm"
            android:dependency="pref_swipe_feed"
            android:key="pref_feed_sorting_algorithm"
            android:summary="%s"
            android:title="@string/title_preference_feed_sorting_algorithm" />
        <ch.deletescape.lawnchair.preferences.FeedProvidersPreference
            android:dependency="pref_swipe_feed"
            android:key="pref_feed_providers"
            android:summary="%s"
            android:title="@string/title_preference_feed_providers" />
        <ch.deletescape.lawnchair.preferences.SeekbarPreference
            android:key="pref_feed_opacity"
            android:persistent="true"
            android:title="@string/opacity"
            app:defaultSeekbarValue="0"
            app:maxValue="100"
            app:minValue="0"
            app:steps="100"
            app:summaryFormat="%.0f%%"
            app:summaryMultiplier="1" />
        <ch.deletescape.lawnchair.preferences.StyledSwitchPreferenceCompat
            android:key="pref_swipe_feed"
            android:summary="@string/summary_preference_swipe_feed"
            android:title="@string/title_preference_swipe_feed" />

    </ch.deletescape.lawnchair.preferences.StyledPreferenceCategory>
</android.support.v7.preference.PreferenceScreen>
